[workspace]
resolver = "2"



members = [
    "braavos",
    "nightwatch",
]


[workspace.dependencies]
hyper = { version = "^0.14", features = ["server", "http1", "tcp"] }
config = { version = "^0.14.0", features = ["toml"] }
serde = { version = "1.0.204", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
hmac = "0.12.0"
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
async-trait = "0.1.81"
serde_json = "1.0.122"
log = "0.4"
fern = "0.6"
humantime = "2.1.0"
### DEV ####
mockall = "0.13.0"

