[package]
name = "braavos"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
serde_json = "1.0.122"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
log = "0.4"
fern = "0.6"
humantime = "2.1.0"
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
hmac = "0.12.0"
