[package]
name = "braavos"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
humantime = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
