[package]
name = "nightwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
braavos = { path = "../braavos" }
prometheus = "0.13.4"
hyper = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
log = { workspace = true }
fern = { workspace = true }

